	
	FIM NEWS -- history of (main) user-visible changes in FIM.

                Version 0.5-rc3

 * fix: configure script regex_t check was unnecessarily broken
 * fix: was likely using uninitialized data in Image()
 * fix: a few more checks when reading PCX files
 * bugfix: a function in AADevice was missing return value
 * documented the %k expando for _info_fmt_str and bugfix (avoiding data corruption when handling %k)
 * to ease reproducible builds: imposing LC_ALL=C to $(YACC) and $(SORT), vim2html.pl reads SOURCE_DATE_EPOCH
 * fix: when stdint.h is available use uint8_t, uint16_t, uint32_t instead of non-portable __u8, __u16, __u32
 * fix: ./configure --disable-pcx was not properly disabling PCX format support
 * fix: compilation was broken without framebuffer (FIM_WITH_NO_FRAMEBUFFER)
 * fix: compilation was broken without FIM_WITH_LIBSDL configured in
 * fix: with _re_search_opts='f' the in-descriptions search was broken
 * fix: removed obsolete documentation for the "window" command, now disabled
 * bugfix: repeating "recording 'repeat_last'" (default '.' key) by prepending a number now works
 * fix: cleaned up the internal keysyms initialization code

                Version 0.5-rc2

 * configure will autodetect and turn aalib on by default
 * fix: will emit more precise diagnostics on unsupported device string
 * fix: adjusted man pages for roff cleanliness
 * fix: typos fixed in the documentation

                Version 0.5-rc1

 * fix: enabled concurrent make, e.g.: make -j 4
 * bug workaround: had no console scroll if no command executed on PostInteractiveCommand
 * fix: some systems don't have sys_errlist: using strerror there
 * fix: corrected the quiet mode (-q) to be quieter
 * fix: no zlib.h build time dependency (this will be reintroduced in the future)

                Version 0.5-rc0

 * -R / --recursive switch to turn on recursive push of command line specified directories
 * added --sort and --sort-basename to sort the images list